# Infa_Tasks

./: 1-1.c  1-2.c  1-3.c  1-4-1.c  1-4-2.c  1-4-3.c  1-4-4.c  1-5.c  1-6.c  1-7.c  1-8.c  2-1.c  2-2.c  2-3.c  2-4.c  2-5.c  README.md
10 семинар/: 1.cpp  10.cpp  11.cpp  12.cpp  13.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.txt  7.cpp  8.cpp  9.cpp
11 семинар/: 1.cpp  number.hpp  vector2f.h
12 семинар/: 2.txt  3.cpp  4.cpp  5.cpp  read.me
13 семинар/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6(не доделанный).cpp  6.cpp
1семинар/: 1-1.c  1-2.c  1-3.c  1-4-1.c  1-4-2.c  1-4-3.c  1-4-4.c  1-5.c  1-6.c  1-7.c  1-8.c
2 Курс 2 Семестр/: Наследование
2 Курс 2 Семестр/1 Семинар/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7(равномерно).cpp  7(равноускоренно).cpp  7.cpp  read.me
2 Курс 2 Семестр/CMake/3/: CMakeLists.txt  MyLib.lib
2 Курс 2 Семестр/CMake/5/: CMakeLists.txt
2 семинар/: 2-1.c  2-10.c  2-11.c  2-12.c  2-13.c  2-2.c  2-3.c  2-4.c  2-5.c  2-6.c  2-7.c  2-8.c  2-9.c
3 семинар/: 3-1.c  3-10.c  3-2.c  3-3.c  3-4.c  3-5.c  3-6.c  3-7.c  3-8.c  3-9.c
4 семинар/: 4-1.c  4-2.c  4-3.c  4-4.c  4-5.c  4-6.c  4-7.c  read.me
5 семинар/: 5-1.c  5-10.c  5-2.c  5-3.c  5-4.c  5-5.c  5-6.c  5-7.c  5-8.c
6 семинар/: 6-1.txt  6-3.c  6-4a.c  6-4b.c  6-5.c  6-6.c  6-7.c  6-8.c  6-9.c  read.me
7 семинар/: 7-1.c  7-2.txt  7-3.c  7-5.c  read.me
8 семинар/: 8-1-1.c  8-1-10.c  8-1-2.c  8-1-3.c  8-1-4.c  8-1-5.c  8-1-6.c  8-1-7.c  8-1-8.c  8-1-9.c  8-2.c  8-4.c  8-5.txt  8-6.c  8-7.c  8-8.c  read.me
9 семинар/: dinarray.h  list.h  main.c  main1.c  read.me
(+50 files in other folders)
